--- a/ACKategories.xcodeproj/xcshareddata/xcschemes/PushNotifications.xcscheme
+++ b/ACKategories.xcodeproj/xcshareddata/xcschemes/PushNotifications.xcscheme
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1500"
+   LastUpgradeVersion = "1510"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "69DF22592B459CC50025C555"
+               BuildableName = "PushNotifications.framework"
+               BlueprintName = "PushNotifications"
+               ReferencedContainer = "container:ACKategories.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -18,9 +34,9 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6971A9852AFD1AF5000FC317"
-               BuildableName = "ACKategoriesResponderTests.xctest"
-               BlueprintName = "ACKategoriesResponderTests"
+               BlueprintIdentifier = "69DF22602B459CC50025C555"
+               BuildableName = "PushNotificationsTests.xctest"
+               BlueprintName = "PushNotificationsTests"
                ReferencedContainer = "container:ACKategories.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -43,6 +59,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "69DF22592B459CC50025C555"
+            BuildableName = "PushNotifications.framework"
+            BlueprintName = "PushNotifications"
+            ReferencedContainer = "container:ACKategories.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
